# Alterator

./: CMakeLists.txt  CMakeLists.txt.user.8a1a09b  CMakeLists.txt.user.c09f706  CMakeLists.txt.user.c267f8f  README.md  main.cpp  main.qml  qml.qrc  qml.qrc.autosave  root.qml
Auxillary/: fileio.cpp  fileio.h
DBusInterfaceLib/DBusInterfaceLib/: CMakeLists.txt  CMakeLists.txt.user.8a1a09b  CMakeLists.txt.user.c267f8f  DbusInterface.qml  main.cpp  main.qml  module.json  qml.qrc  section.json
DBusInterfaceLib/DBusInterfaceLib/headers/: dbus_interface.h  dbus_property_map.h  dbus_qml_connector.h
DBusInterfaceLib/DBusInterfaceLib/sources/: dbus_interface.cpp  dbus_property_map.cpp  dbus_qml_connector.cpp
components/: Option.qml  OptionRow.qml  Section.qml
components/Section/: Option.qml  SectionDescription.qml  SectionHeader.qml  SectionImage.qml  SectionOptionFlow.qml  SectionOptionGrid.qml
pages/: MainPage.qml
scripts/: CreateObject.js  FileIO.js
styles/: main_page_styles.js  styles.js
templates/: module_template.json  section_template.json
